# popmatch

./: LICENSE  README.md  pyproject.toml
datasets/: nhanes.csv
experiment/: gather_correlation.py  gather_overlap.py  gather_results.py  show_a2a_valid.py
experiment/groupon/: artificial.parquet  compare_propensity_matching.py  overlaps.parquet  results.parquet
experiment/horse/: artificial.parquet  compare_propensity_matching.py  overlaps.parquet  results.parquet  test.py
experiment/nhanes/: artificial.parquet  compare_propensity_matching.py  overlaps.parquet  results.parquet
experiment/synthetic_7_0/: artificial.parquet  compare_propensity_matching.py  overlaps.parquet  results.parquet
experiment/synthetic_7_1/: artificial.parquet  compare_propensity_matching.py  overlaps.parquet  results.parquet
experiment/synthetic_7_10/: artificial.parquet  overlaps.parquet  results.parquet
experiment/synthetic_7_2/: artificial.parquet  overlaps.parquet  results.parquet
experiment/synthetic_7_3/: artificial.parquet  overlaps.parquet  results.parquet
experiment/synthetic_7_4/: artificial.parquet  overlaps.parquet  results.parquet
experiment/synthetic_7_5/: artificial.parquet  overlaps.parquet  results.parquet
experiment/synthetic_7_6/: artificial.parquet  compare_propensity_matching.py  overlaps.parquet  results.parquet
experiment/synthetic_7_7/: artificial.parquet  overlaps.parquet  results.parquet
popmatch/: cluster.py  data.py  evaluation.py  experiment.py  match.py  plot.py  preprocess.py  propensity.py  utils.py
(+6 files in other folders)
