[tool.poetry]
name = "popmatch"
version = "0.0.1"
description = "A python package to perform population matching in the most automated way."
authors = ["Anonymous"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "1.25.2"
pandas = "1.5.3"
scikit-learn = "1.1.3"
psmpy = "^0.3.13"
scipy = "1.10.1"
formulaic = "^0.6.4"
statsmodels = "0.13.5"
rpy2 = "3.5.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
